# rapidfuzz-php

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  composer.json  config.m4  phpunit.xml
src/: php_rapidfuzz.h  php_rapidfuzz_arginfo.h  rapidfuzz.cpp  rapidfuzz.stub.php
tests/: RapidFuzzTest.php
